[package]
name = "limbo_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
glam = "0.25.0"
winit = "0.29"

[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs/"
features = ["glam"]
